<resources>
    <string name="app_name">慧农帮</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_donate">捐赠</string>
    <string name="title_shopping">购物</string>
    <string name="title_planting">种植</string>
    <string name="title_policy">政策</string>
    <string name="title_my">我的</string>
    <string name="back"><![CDATA[<]]></string>
</resources>