<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_shop_black_32dp"
        android:title="@string/title_shopping" />
    <item
        android:id="@+id/navigation_donate"
        android:icon="@drawable/ic_donate_black_32dp"
        android:title="@string/title_donate" />


    <item
        android:id="@+id/navigation_planting"
        android:icon="@drawable/ic_planting_black_32dp"
        android:title="@string/title_planting" />
    <item
        android:id="@+id/navigation_policy"
        android:icon="@drawable/ic_policy_black_32dp"
        android:title="@string/title_policy" />
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_my_black_32dp"
        android:title="@string/title_my" />

</menu>